# chaos-rpg

./: .gitignore  Cargo.toml  MATH_MANIFESTO.md  README.md  chaos_config.toml  launch-graphical.bat  launch-terminal.bat  launch.bat
audio/: Cargo.toml
core/: Cargo.toml
core/src/: achievement_system.rs  achievements.rs  audio_events.rs  audio_synth.rs  bestiary.rs  bosses.rs  chaos_config.rs  chaos_pipeline.rs  character.rs  character_creator.rs  character_lore.rs  class_system.rs  codex_progress.rs  combat.rs  combat_simulator.rs  combat_system.rs  crafting.rs  crafting_system.rs  crafting_system_v2.rs  daily_leaderboard.rs  dialogue.rs  dialogue_system.rs  dungeon.rs  dungeon_generator.rs  dungeon_generator_v2.rs  economy.rs  enemy.rs  enemy_ai.rs  event_system.rs  faction_system.rs  factions.rs  inventory_system.rs  io_util.rs  items.rs  legacy_system.rs  lib.rs  loot_system.rs  loot_table.rs  magic_system.rs  map_generator.rs  (+22 more)
core/src/lore/: bosses.rs  codex.rs  enemies.rs  events.rs  fragments.rs  items.rs  mod.rs  narrative.rs  world.rs
docs/: BOSSES.md  GETTING_STARTED.md  LORE.md  MECHANICS.md  PROOF_ENGINE_API_BOUNDARY.md
graphical/: Cargo.toml
graphical-proof/: Cargo.toml
graphical-proof/src/: anim_bridge.rs  audio_bridge.rs  audio_reactive.rs  auto_play.rs  boss_bridge.rs  cinematics.rs  combat_hud.rs  combat_visuals.rs  debug_tools.rs  dialogue_system.rs  dungeon_bridge.rs  enemy_ai.rs  game_economy.rs  game_logic.rs  gpu_chaos.rs  lighting.rs  main.rs  mod_system.rs  music_bridge.rs  physics_bridge.rs  replay_system.rs  save_upgrade.rs  shader_presets.rs  state.rs  terrain_map.rs  theme.rs  ui_render.rs  vfx_integration.rs  weather_system.rs
graphical-proof/src/effects/: boss_visuals.rs  combat_fx.rs  debris.rs  environmental.rs  fluid_arena.rs  mod.rs  particle_presets.rs  screen_effects.rs  spell_fx.rs  status_fx.rs  transitions.rs
graphical-proof/src/entities/: enemies.rs  formations.rs  mod.rs  player.rs  soft_entity.rs
graphical-proof/src/exploration/: dungeon_renderer.rs  mod.rs  room_events.rs  world_map.rs
graphical-proof/src/magic/: boss_magic.rs  mod.rs  spell_visuals.rs  status_visuals.rs
graphical-proof/src/scenes/: chaos_field.rs  combat_scene.rs  mod.rs
graphical-proof/src/screens/: achievements.rs  bestiary.rs  boon_select.rs  character_creation.rs  character_sheet.rs  codex.rs  combat.rs  crafting.rs  daily_leaderboard.rs  floor_nav.rs  game_over.rs  generic.rs  mod.rs  mode_select.rs  passive_tree.rs  room_view.rs  run_history.rs  scoreboard.rs  settings.rs  shop.rs  title.rs  tutorial.rs  victory.rs
graphical/src/: achievement_banner.rs  anim_config.rs  chaos_field.rs  color_grade.rs  combat_anim.rs  death_seq.rs  main.rs  nemesis_reveal.rs  renderer.rs  sprites.rs  text_effects.rs  theme.rs  tile_effects.rs  ui_overlay.rs  visual_config.rs  weather.rs
server/: worker.js  wrangler.toml
src/: atlas.rs  body.rs  bosses.rs  chaos_pipeline.rs  character.rs  character_creation.rs  combat.rs  enemy.rs  items.rs  lib.rs  magic.rs  main.rs  math_engines.rs  nemesis.rs  npcs.rs  quest.rs  recipes.rs  scoreboard.rs  skill_checks.rs  skill_tree.rs  spell_system.rs  (+6 more)
terminal/: Cargo.toml
terminal/src/: main.rs  ratatui_screens.rs  ui.rs
web/: Cargo.toml
web/src/: main.rs
(+5 files in other folders)
