[package]
name = "chaos-rpg"
version = "0.1.0"
edition = "2021"
description = "A mathematically cursed terminal roguelike where every outcome is determined by chaining mathematical algorithms"
license = "MIT"

[[bin]]
name = "chaos-rpg"
path = "src/main.rs"

[lib]
name = "chaos_rpg"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
