[workspace]
members = [
    "core",
    "audio",
    "terminal",
    "graphical",
    "web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
thiserror = "1"
crossterm = "0.27"
ratatui = "0.28"
bracket-lib = "0.8"
macroquad = "0.4"
chaos-rpg-core = { path = "core" }
chaos-rpg-audio = { path = "audio" }
rodio = { version = "0.17", default-features = false, features = ["wav"] }
toml = "0.8"
ureq = { version = "2", features = ["json"] }
